adjusted spacing issues, text spacing wasn't working before because I didn't specify font weight for body paragraph.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   .logo {
     font-family: 'Roboto Mono', monospace;
     font-size: 30px;
+    letter-spacing: 0.2rem;
   }
 
   nav {
@@ -47,12 +48,17 @@
     cursor: pointer;
     transition: all 0.3s ease;
   }
-  /* Style the body */
-  body {
+  /* Style the body for about me page */
+  .aboutMe p {
     font-family: 'Open Sans', sans-serif;
     z-index: -1;
+    text-align: center;
+    letter-spacing: 0.08rem;
+    justify-content: space-around;
+    font-weight: 200;
   }
-@media screen and (max-width: 1024px) {
+  /* for computer screens */
+@media screen and (min-width: 800px) {
   .nav-links {
     width: 60%;
   }
@@ -76,6 +82,9 @@
     transform: scale(1,1);
   }
 }
+/*
+for mobile screens
+ */
   @media screen and (max-width: 768px) {
     body {
       overflow-x: hidden;
